2008-01-02  Karl Fogel  <kfogel@red-bean.com>

	Change a return type, for greater extensibility.  See
	http://lists.gnu.org/archive/html/emacs-devel/2007-12/msg01077.html
	and its thread for discussion leading to this change.

	* emacs-cvs/lisp/bookmark.el:
	(bookmark-jump-noselect): Return an alist instead of a dotted pair.
	(bookmark-jump, bookmark-jump-other-window, bookmark-insert)
	(bookmark-bmenu-2-window, bookmark-bmenu-other-window)
	(bookmark-bmenu-switch-other-window): Adjust accordingly.
	(bookmark-make-cell-function): Adjust documentation accordingly.

	* emacs-cvs/lisp/image-mode.el
	(image-bookmark-jump): Adjust return type accordingly; document.

	* emacs-cvs/lisp/doc-view.el
	(doc-view-bookmark-jump): Adjust return type accordingly; document.

2008-01-02  Miles Bader  <Miles Bader <miles@gnu.org>>

	* net/rcirc.el (rcirc-log-filename-function): New variable.
	(rcirc-log): Use `rcirc-log-filename-function' to generate the
	log-file name.  Don't log anything if it returns nil.
	(rcirc-log-write): Use `expand-file-name' when merging the
	log-file name from the alist with rcirc-log-directory; this does
	the right thing if the name in the alist already an absolute
	filename.  Make the log-file directory if necessary.

2007-12-29  Richard Stallman  <rms@gnu.org>

	* font-lock.el (font-lock-prepend-text-property)
	(font-lock-append-text-property): Canonicalize the face and
	font-lock-face properties.

	* faces.el (facep): Doc fix.

	* startup.el (fancy-startup-tail, fancy-about-text)
	(fancy-startup-text): Regularize format of face property.

	* facemenu.el (list-colors-print): Use :background and :foreground
	instead of background-color and foreground-color.

2007-12-29  Drew Adams  <drew.adams@oracle.com>

	* cus-edit.el (custom-add-parent-links):
	Fill the "Parent documentation" text.

2007-12-29  Eli Zaretskii  <eliz@gnu.org>

	* textmodes/ispell.el (ispell-grep-command): Use "grep" on
	MS-Windows and MS-DOS.