@@ -76,9 +76,10 @@ An empty list disables VC altogether."
   :version "23.1"
   :group 'vc)
 
+;; Note: we don't actually have a darcs back end yet.
 (defcustom vc-directory-exclusion-list '("SCCS" "RCS" "CVS" "MCVS" 
 					 ".svn" ".git" ".hg" ".bzr" 
-					 "_MTN" "{arch}")
+					 "_MTN" "_darcs" "{arch}")
   "List of directory names to be ignored when walking directory trees."
   :type '(repeat string)
   :group 'vc)
